# dopemux

./: .coveragerc  .gitignore  .lychee.toml  .pre-commit-config.yaml  .vale.ini  FINAL_PROJECT_STATUS.md  Makefile  README.md  UNIFIED_MEMORY_IMPLEMENTATION.md  automationTtools.sql  cli-banners-and-branding.md  configure_reranker.js  debug-mcp-health.sh  diagrams  docsDev.md  docsNusageExamples.md  dopemux.py  dopemuxBraindIdentity.yaml  index_codebase.js  index_voyage_new.js  mcp-proxy-config.json  mcp-proxy-config.yaml  metamcp_simple_server.py  mkdocs.yml  projectIdentity.md  pyproject.toml  pytest.ini  reindex_large.js  reindex_voyage_final.js  reindex_voyageai.js  reindex_with_reranker.js  requirements-memory.txt  requirements.txt  starterKit.md  tox.ini
.claude/: SESSION_STATE_CURRENT.md  SESSION_STATE_MCP_ORCHESTRATOR.md  SESSION_STATE_MERGE.md  claude.md  config.json  task-master-mcp-config.json
.claude/commands/: adr-new.md  doc-ensure-frontmatter.md  doc-new.md  doc-pull.md  docs-helper.md  rfc-lint.md  rfc-new.md  rfc-promote.md
.github/workflows/: docs.yml
PromptEngine_Starter_Kit-2 2/: README.md  brew_formula.rb  setup.py
PromptEngine_Starter_Kit-2 2/prompt_engine/: cli.py
api/: openapi.yaml
config/escalations/: escalations.yml
config/mcp/: broker.yaml  clear_thought.yml  policy.yaml
config/routing/: clear_thought_rules.yml
docker/leantime/: .env.leantime  .env.template  .env.working  docker-compose.yml
docker/mcp-servers/: .env.template  README-MULTI-INSTANCE.md  docker-compose.multi-instance.yml  docker-compose.yml  dopemux  launch-instance.sh  mcp-config.yaml  start-all-mcp-servers.sh  start-mcp-server.sh  stop-all-mcp-servers.sh  view-logs.sh
docker/mcp-servers/docrag-service/: .env.example  Dockerfile  pyproject.toml
docker/mcp-servers/docrag-service/scripts/: test-deployment.sh
docker/mcp-servers/docrag-service/src/docrag/: __init__.py  bulk_operations.py  config.py  database.py  embeddings.py  main.py  mcp_tools.py  models.py  service.py
docker/mcp-servers/docrag-service/src/docrag/ingestion/: __init__.py  cli.py
docker/mcp-servers/docrag-service/tests/: test_models.py
docker/memory-stack/: Dockerfile.conport  docker-compose.yml  init-db.sql
dopemux-memory-starter-kit/: README_MEMORY_SYSTEM.md  assemble_project_csvs.py  context_reload_prompt.md  dopemux_branding_samples.txt  export_markdown.py  instructions.txt  memory_checkpoint_prompt.md  project_manifest.txt
dotfiles/.config/: starship.toml
installers/leantime/: health_check.py  install.py
scripts/: docs_frontmatter_guard.py  install-mcp-servers.sh  mcp-proxy-setup.sh  rfc_new.py  rfc_promote.py  slash_commands.py
scripts/memory/: start-memory-stack.sh  test-memory-system.py
src/conport/: __init__.py  importers.py  memory_server.py
src/dopemux/: __init__.py  cli.py  health.py
src/integrations/: claude_autoresponder.py  leantime_bridge.py  leantime_mcp_server.js  (+2 more)
tests/: __init__.py  conftest.py  test_attention_monitor.py  test_claude_configurator.py  test_claude_launcher.py  test_cli.py  test_config_manager.py  test_context_manager.py  test_init.py  test_task_decomposer.py
(+62 files in other folders)
